<resources>
    <string name="app_name">chat_app</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="conformpassword">ConformPassword</string>
    <string name="conform_password">Conform password</string>
    <string name="name">Name</string>
    <string name="add_image">Add Image</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="default_notification_channel_id">com.examole.chat_app</string>
    <string name="onboarding_title1">Instant Setup</string>
    <string name="onboarding_desc1">Set up or join a video/audio meeting or conference instantly</string>
    <string name="onboarding_title2">Everywhere Together</string>
    <string name="onboarding_title3">Instant Messaging</string>
    <string name="onboarding_title4">Schedule Meetings</string>
    <string name="onboarding_desc2">Enjoy high quality audio &amp; video anywhere and stay in touch.</string>
    <string name="onboarding_desc3">Stay connected with instant messaging in between the meeting.</string>
    <string name="onboarding_desc4">Schedule your meetings and conferences with ease.</string>
    <string name="record_audio_and_send">Record Audio and Send</string>
    <string name="timeZero">0:00</string>
</resources>